WIP - fixing stretched header logo issue on mobile

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -6,7 +6,6 @@
 .header__logoBanner {
   width: 25%;
   height: auto;
-  box-sizing: border-box;
 }
 
 .header__logoContainer {
